# datapeek

./: .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg  test.csv
datapeek/: __main__.py  df.py  main-prev.py  main.py
pandas_tui/: __main__.py  df.py  main.py
