[metadata]
name = pandas_tui
version = 0.0.1
description = A Text User Interaface (TUI) using pandas
author = Alex Coleman
author_email = coleman.g.alex@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
licence = MIT

[options]
packages = find:
install_requires =
    pandas
    rich
    textual
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
